--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<div class="form-container">
-  <div class="left-form">
-    <app-create-form></app-create-form>
-  </div>
-  <div class="right-form"><app-generate-form></app-generate-form></div>
-</div>
+<!-- <app-navbar></app-navbar> -->
+<router-outlet></router-outlet>
